# GraphicsEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HTA.cpp  main.cpp
Math/: Vector.h
res/materials/: guns.mat  missing.mat  speeder.mat
res/materials/pipelines/: dummy.pl  phong.pl
res/meshes/: spaceship.mtl
res/prefabs/: bunny.pfb  cube.pfb  double_suzanne.pfb  generator.pfb  guns.pfb  quad.pfb  spaceship.pfb  speeder.pfb  speeder_without_guns.pfb  sphere.pfb  suzanne.pfb
res/rendering_strategies/background_compute_effects/: editor.cef  editor.cei  nightsky.cef  nightsky.cei
res/scenes/: editor.scn  testscene.scn
res/shaders/: coloured_triangle_mesh.vert  gradient.comp  mesh_normals.vert  phong.frag  phong.vert  sky.comp  texture.frag
res/shaders/util/: scene_data.glsl
shaders/: compile.bat
shaders/compiled/vulkan-tutorial/: vert.spv
shaders/vulkan-tutorial/: triangle.frag  triangle.vert
src/: main.cpp  test.cpp
src/Demo/: Scripts.h
src/Editor/: DebugGUIRenderingStrategy.cpp  DebugGUIRenderingStrategy.h  Display.h  Editor.h  EditorGUIRenderingStrategy.cpp  EditorGUIRenderingStrategy.h  EntityDetails.cpp  EntityDetails.h  ImGUIManager.cpp  ImGUIManager.h  Macros.h  Publishable.cpp  Publishable.h  RenderView.h  SceneView.cpp  SceneView.h
src/Editor/Publications/: Components.h  NumericTypes.h
src/Engine/: AssetManager.cpp  AssetManager.h  DeletionQueue.h  Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Macros.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowedApplication.cpp  WindowedApplication.h
src/Engine/Core/: ECS.cpp  ECS.h  HierarchyComponent.h  Scene.h  SceneHierarchy.cpp  SceneHierarchy.h  Script.cpp  Script.h  Time.h
src/Engine/Debug/: Logging.cpp  Logging.h  Profiling.cpp  Profiling.h
src/Engine/Editor/: Display.h  Editor.h  EditorWindow.h  EntityDetails.cpp  EntityDetails.h  Publishable.cpp  Publishable.h  SceneView.cpp  SceneView.h
src/Engine/Graphics/: AllocatedMesh.cpp  AllocatedMesh.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandQueue.cpp  CommandQueue.h  ComputeEffect.h  DescriptorHandling.cpp  DescriptorHandling.h  DrawData.h  GPUDispatcher.cpp  GPUDispatcher.h  GPUMemoryManager.h  GPUObjectManager.h  HelloTriangleApp.cpp  HelloTriangleApp.h  ImGUIManager.cpp  ImGUIManager.h  Image.h  InstanceManager.cpp  InstanceManager.h  Material.cpp  Material.h  MemoryAllocator.cpp  MemoryAllocator.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Publishable.h  RenderTargetProvider.h  Renderer.cpp  Renderer.h  RenderingRequest.h  RenderingStrategy.h  Shader.cpp  Shader.h  TestMaterial.h  (+6 more)
src/Engine/Graphics/Materials/: AlbedoAndBump.h  TestMaterial.h
src/Engine/Graphics/RenderingStrategies/: ComputeBackground.cpp  ComputeBackground.h  ForwardRendering.cpp  ForwardRendering.h
src/Engine/Math/: Matrix.h  Vector.h
src/Engine/Maths/: Dimension.h  Matrix.h  Quaternion.h  Transformations.h
src/Engine/Serialization/: Entity.h  MeshRenderer.h
src/Engine/Tests/: AlignmentTests.h  MathsTests.h  Test.h
src/Engine/Util/: DeletionQueue.cpp  DeletionQueue.h  FileIO.cpp  FileIO.h  Macros.h  Parsing.cpp  Parsing.h  ParsingSubfunctions.h  Preprocessing.cpp  Preprocessing.h  Serializable.h
src/Engine/Util/AssetParsing/: BackgroundEffectParsing.cpp  ComponentParsing.h  MaterialParsing.cpp  MaterialParsing.h  Members.h  MeshParsing.cpp  MeshParsing.h  MultiUseImplementations.h  PrefabParsing.cpp  PrefabParsing.h  ScriptParsing.h  ShaderParsing.cpp  ShaderParsing.h  TextureParsing.cpp  TextureParsing.h
src/Engine/Util/Deserializers/: DisplayParser.h  MeshRendererParser.h  TransformParser.h
src/Engine/Util/Serialization/: EntitySerialization.h
